Cambios navbar, introduccion, Experiencias
He cambiado el nav para que sea responsiba, basandome en  uno de los navbar en la documentacion de bootstrap, he cambiado la introduccion para que sea responsiba a las diferentes pantallas de los diferentes dispositivos, cuando la pantalla sea de dispositivo movil la imagen se posicionara en la parte inferior y el texto ocupara toda la pantalla y ademas en experiencias laborales he añadido un estilo de listado y texto colapsado sacado de la documentacion de bootstrap

--- a/Style/Main.css
+++ b/Style/Main.css
@@ -5,9 +5,11 @@ header{
 nav a{
     text-align: center;
 }
+.collapse .list-group-item:hover{
+    background-color: #a3a3a3;
+}
 #MyPhoto{
-    float: right;
-    width: 200px;
-    height: 200px;
-    border-radius: 10px;
+    height: 240px;
+    width: 240px;
+    border-radius: 18px;
 }
