--- a/Style/Main.css
+++ b/Style/Main.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: "Comme";
+    src: url("/Fonts/Comme/Comme-VariableFont_wght.ttf") format("truetype");
+}
+*{
+    font-family: Comme, Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
 header{
     background-color:orange;
 }
