Todas las construcciones dinamicas echas
Ya he acabado las construcciones dinamicas relacionadas con los idiomas y las cualidades los cuales eran los que me quedaban de entre todos y ahora deberian construir el listado segun lo que haya en el json del CV.

--- a/Style/Main.css
+++ b/Style/Main.css
@@ -19,3 +19,8 @@ nav a{
     width: 240px;
     border-radius: 18px;
 }
+#ListIdiomas img{
+    height: 150px;
+    width: 250px;
+    border-radius: 18px;
+}
