Arreglo de links en los scripts
He arreglado los links para que sean rutas relativas al archivo json con la informacion de curriculum

--- a/Style/Main.css
+++ b/Style/Main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Comme";
-    src: url("/Fonts/Comme/Comme-VariableFont_wght.ttf") format("truetype");
+    src: url("../Fonts/Comme/Comme-VariableFont_wght.ttf") format("truetype");
 }
 :root{
     --footer-bg-color:#4d4d4d;
