Cambios esteticos y eliminacion de archivos innecesarios
He eliminado los archivos que no tenian funcion alguna y se habian vuelto obsoletos a este momento y he modificado algunos detalles de la pagina para que tenga un mejor aspecto.

--- a/Style/Main.css
+++ b/Style/Main.css
@@ -26,6 +26,12 @@
 body{
     background-color: var(--Dynamic-bg-Color);
 }
+h2{
+    margin-top: 40px;
+}
+h3{
+    margin-top: 15px;
+}
 section{
     background-color: var(--Dynamic-bg-Color);
     color: var(--Dynamic-Text-Color);
